resource-manifests/deployment-sa-web-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sa-web-app
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: sa-web-app
    spec:
      containers:
      - image: aasha/sa-webapp
        imagePullPolicy: IfNotPresent
        name: sa-web-app
        ports:
          - containerPort: 8080
