resource-manifests/pod-sa-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sa-frontend
  labels:
    app: sa-frontend
spec:
  containers:
    - image: aasha/sentiment-analysis-frontend:local
      imagePullPolicy: IfNotPresent
      name: sa-frontend
      ports:
        - containerPort: 80
