resource-manifests/ingress-sa-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sa-ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec: 
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: sa-frontend
          servicePort: 80
